# togglr

./: .gitignore  .golangci.yml  Cargo.toml  Dockerfile  README.md  docker-compose.yml  go.mod  go.sum  resolver.go  resolver_test.go  toggle.go  toggleService.go  toggleService_test.go  togglr.go  togglrService.go
cmd/migrate/: main.go
cmd/server/: main.go
env/: env.go
hmac/: hmac.go  hmac_test.go
http/: account.go  account_test.go  auth.go  github.go  http.go  metadata.go  middleware.go  resolver.go  status.go  toggle.go  toggle_test.go  user.go  user_test.go
migrations/: down.sql  up.sql
mock/: account.go  metadata.go  toggle.go  user.go
pg/: account.go  metadata.go  pg.go  toggle.go  user.go
rules/: binary.go  bool.go  bool_test.go  float.go  float_test.go  ident.go  ident_test.go  int.go  int_test.go  rules.go  serialization_test.go  string.go  string_test.go  unary.go
src/: account.rs  env.rs  expr.rs  http.rs  lib.rs  main.rs  user.rs
src/pg/: account.rs  error.rs  mod.rs  user.rs
token/: token.go
uid/: uid.go
